<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/pref_key_notifications"
        android:title="@string/pref_title_notifications"
        android:summaryOn="@string/pref_description_notifications_enabled"
        android:summaryOff="@string/pref_description_notifications_disabled"
        android:defaultValue="true" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="@string/pref_key_country"
        android:title="@string/pref_title_country"
        android:defaultValue="@string/pref_country_default"
        android:entries="@array/pref_country_names"
        android:entryValues="@array/pref_country_codes"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
